# ProjetoZero

./: .gitignore  README.md  pyproject.toml
app/: main.py  pipeline_completa.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
tests/: test_integration.py  test_pipeline.py  test_unitarios.py
